2008-05-11  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-22
        
        * [JSPWIKI-224] TranslatorReader now is just a proxy to the
        JSPWikiMarkupParser.  It will be finally gone in 3.0.
        
2008-05-10  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-21
        
        * Logincookies are now written with UTF-8 instead of platform
        default encoding.  This should fix issues with users with non-ASCII
        chars sometimes having the wrong UID when their session expires.

2008-05-09  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-20
        
        * [JSPWIKI-251]: Removed the old com.ecyrd.jspwiki.PageRenamer
        and replaced it with com.ecyrd.jspwiki.content.PageRenamer, which
        is fully Apache-licensed.
        
        Unfortunately, the new PageRenamer does not support changing
        referring pages yet, error messages are not localized properly,
        etc.  So this is a considerable functionality downgrade until
        we can get a better version made.  Patches gladly accepted!

2008-05-06  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-19
        
        * [JSPWIKI-50] Improved performance of RecentChangesPlugin by 
        adding better caching to the CachingAttachmentProvider.  Thanks
        to Harry Metske!

2008-05-05  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-18

        * [JSPWIKI-239] jspwiki.cookieAuthorization.expiry is now called
        jspwiki.cookieAuthentication.expiry, because that is correct.  Thanks
        to Florian!

        * 2.7.0-svn-17
        
        * Removed JUG UUID generation libraries to favour the Java
        built-in ones.
        
2008-04-20  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-16
        
        * Moved the rest of the PluginResources class into etc/i18n, as
        their old place was confusing people.
        
        * [JSPWIKI-243], [JSPWIKI-244], [JSPWIKI-242], [JSPWIKI-241] Fixed