@@ -47,12 +47,17 @@ public class ReferringPagesPlugin
     public static final String PARAM_EXTRAS   = "extras";
     public static final String PARAM_PAGE     = "page";
     
+    /**
+     *  {@inheritDoc}
+     */
     public String execute( WikiContext context, Map params )
         throws PluginException
     {
         ReferenceManager refmgr = context.getEngine().getReferenceManager();
         String pageName = (String)params.get( PARAM_PAGE );
         ResourceBundle rb = context.getBundle(WikiPlugin.CORE_PLUGINS_RESOURCEBUNDLE);
+        
+        StringBuffer result = new StringBuffer( 256 );
         
         if( pageName == null )
         {
@@ -75,20 +80,25 @@ public class ReferringPagesPlugin
                 extras = rb.getString("referringpagesplugin.more");
             }
             
-            log.debug( "Fetching referring pages for "+page.getName()+
-                       " with a max of "+items);
+            if( log.isDebugEnabled() )
+                log.debug( "Fetching referring pages for "+page.getName()+
+                           " with a max of "+items);
         
             if( links != null && links.size() > 0 )
             {
                 links = filterCollection( links );
                 wikitext = wikitizeCollection( links, m_separator, items );
 
+                result.append( makeHTML( context, wikitext ) );
+                
                 if( items < links.size() && items > 0 )
                 {
-                    Object[] args = { "" + ( links.size() - items),
-                                      context.getURL( WikiContext.INFO, page.getName() ) };
-                    extras = MessageFormat.format(extras, args); 
-                    wikitext += extras;
+                    Object[] args = { "" + ( links.size() - items) };
+                    extras = MessageFormat.format(extras, args);
+                    
+                    result.append( "<br />" );
+                    result.append( "<a class='morelink' href='"+context.getURL( WikiContext.INFO, page.getName() )+"' ");
+                    result.append( ">"+extras+"</a><br />");
                 }
             }
 
@@ -98,21 +108,23 @@ public class ReferringPagesPlugin
             if (links == null || links.size() == 0)
             {
                 wikitext = rb.getString("referringpagesplugin.nobody");
+                
+                result.append( makeHTML( context, wikitext ) );
             }
             else
             {
-
-                if (m_show.equals(PARAM_SHOW_VALUE_COUNT))
+                if( m_show.equals( PARAM_SHOW_VALUE_COUNT ) )
                 {
-                    wikitext = "" + links.size();
-                    if (m_lastModified)
+                    result = new StringBuffer();
+                    result.append( links.size() );
+                    if( m_lastModified )
                     {
-                        wikitext = links.size() + " (" + m_dateFormat.format(m_dateLastModified) + ")";
+                        result.append( " (" + m_dateFormat.format( m_dateLastModified ) + ")" );
                     }
                 }
             }
             
-            return makeHTML( context, wikitext );
+            return result.toString();
         }
 
         return "";
