@@ -31,7 +31,7 @@ import com.ecyrd.jspwiki.WikiContext;
  */
 public interface WikiPlugin
 {
-    static final String CORE_PLUGINS_RESOURCEBUNDLE = "com.ecyrd.jspwiki.plugin.PluginResources";
+    static final String CORE_PLUGINS_RESOURCEBUNDLE = "plugin.PluginResources";
 
     /**
      *  This is the main entry point for any plugin.  The parameters are parsed,
